--- a/index.html
+++ b/index.html
@@ -263,6 +263,7 @@
 <li><a href="Norway.html">Norway</a></li>
 <li><a href="Denmark.html">Denmark</a></li>
 <li><a href="India.html">India</a></li>
+<li><a href="Italy.html">Italy</a></li>
 <li><a href="Australia.html">Australia</a></li>
 <li><a href="country_placeholder.html">country_placeholder</a></li>
 <li><a href="Australien.html">Australien</a></li>
@@ -306,6 +307,7 @@
 <a href="Norway.html">Norway</a>
 <a href="Denmark.html">Denmark</a>
 <a href="India.html">India</a>
+<a href="Italy.html">Italy</a>
 <a href="Australia.html">Australia</a>
 <a href="country_placeholder.html">country_placeholder</a>
 <a href="Australien.html">Australien</a>
