--- a/index.html
+++ b/index.html
@@ -261,9 +261,11 @@
 <li><a href="Germany.html">Germany</a></li>
 <li><a href="Luxembourg.html">Luxembourg</a></li>
 <li><a href="United States.html">United States</a></li>
+<li><a href="Czechia.html">Czechia</a></li>
 <li><a href="UK.html">UK</a></li>
 <li><a href="Netherlands.html">Netherlands</a></li>
 <li><a href="Canada.html">Canada</a></li>
+<li><a href="Romania.html">Romania</a></li>
 <li><a href="Norway.html">Norway</a></li>
 <li><a href="Denmark.html">Denmark</a></li>
 <li><a href="Spain.html">Spain</a></li>
@@ -302,9 +304,11 @@
 <a href="Germany.html">Germany</a>
 <a href="Luxembourg.html">Luxembourg</a>
 <a href="United States.html">United States</a>
+<a href="Czechia.html">Czechia</a>
 <a href="UK.html">UK</a>
 <a href="Netherlands.html">Netherlands</a>
 <a href="Canada.html">Canada</a>
+<a href="Romania.html">Romania</a>
 <a href="Norway.html">Norway</a>
 <a href="Denmark.html">Denmark</a>
 <a href="Spain.html">Spain</a>
